# vscode4msys2

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml
tools/: VSC_clang64.bat  VSC_mingw64.bat
